# bibbi-seiso

./: .env.dist  .gitignore  .gitlab-ci.yml  README.md  add_uri_prefix_bibbi_mappings.py  logging.yml  pyproject.toml  run.py  setup.cfg
reports/: bibbi-noraf-overgang - PERSON.json
script/: 2022-05-27-rydde-651-strenger.py
script/2021-05-konvertering-form-sjanger/: 2021-06-konvertering-form-sjanger.py
seiso/: constants.py
seiso/common/: alma.py  interfaces.py  logging.py  mailer.py  noraf_record.py  viaf.py  xml.py
seiso/console/: helpers.py  import_grep.py  match_persons.py  noraf.py  oai.py  update_persons.py  validate_persons.py  verify_bibbi_noraf_mappings.py  verify_noraf_bibbi_mappings.py
seiso/matcher/: matchers.py
seiso/services/: alma.py  noraf.py  oai.py  promus.py  viaf.py
seiso/services/promus/: __init__.py  authorities.py  enums.py  item.py  promus.py  promus_record.py
soji/common/: alma.py  bare.py  bare_record.py  interfaces.py  logging.py  promus.py  viaf.py  xml.py
soji/console/: match_persons.py  update_persons.py  validate_persons.py
soji/matcher/: matchers.py
tests/: test_bare.py  test_bare_record.py  test_monitor_nbvok.py  test_noraf.py  test_noraf_record.py  test_promus.py  test_viaf.py  test_xml.py
