[tool.poetry]
name = "bibbi-seiso"
version = "0.1.0"
description = "Collection of scripts for reporting adn fixing issues with Bibbi and Bibbi mappings"
authors = ["Dan Michael O. Heggø <Dan.Michael.Heggo@bibsent.no>"]
license = "MIT"
packages = [
    { include = "seiso" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
pydash = "^4.7.6"
python-dotenv = "^0.13.0"
unidecode = "^1.1.1"
lxml = "^4.5.0"
tqdm = "^4.46.0"
cachecontrol = "^0.12.6"
pyodbc = "^4.0.30"
openpyxl = "^3.0.3"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"
prompt_toolkit = "^3.0.5"
questionary = "^1.5.2"
sqlparams = "^3.0.0"
pyyaml = "^5.3.1"
humanize = "^2.5.0"
sickle = {git = "https://github.com/danmichaelo/sickle.git", rev = "retry-patch"}
requests-toolbelt = "^0.9.1"
rdflib = "^6.0.0"
rdflib-jsonld = "^0.6.0"
attrs = "^20.3.0"
pandas = "^1.2.2"
ipykernel = "^5.5.0"
structlog = "^21.1.0"
mdmail = "^0.1.3"
SPARQLWrapper = "^1.8.5"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
pylint = "^2.5.2"
black = "^19.10b0"
pytest = "^5.4.2"
pycodestyle = "^2.6.0"
pyflakes = "^2.2.0"

[tool.poetry.scripts]
oai = "seiso.console.oai:main"
noraf = "seiso.console.noraf:main"
match_persons = "seiso.console.match_persons:main"
update_persons = "seiso.console.update_persons:main"
verify_bibbi_noraf_mappings = "seiso.console.verify_bibbi_noraf_mappings:main"
verify_noraf_bibbi_mappings = "seiso.console.verify_noraf_bibbi_mappings:main"
monitor_nbvok = "seiso.console.monitor_nbvok:main"
map_nbvok = "seiso.console.map_nbvok:main"
import_grep = "seiso.console.import_grep:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
