[tool.poetry]
name = "bibbi-seiso"
version = "0.1.0"
description = "Collection of scripts for reporting adn fixing issues with Bibbi and Bibbi mappings"
authors = ["Dan Michael O. Heggø <Dan.Michael.Heggo@bibsent.no>"]
license = "MIT"
packages = [
    { include = "seiso" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.23.0"
pydash = "^8.0.0"
python-dotenv = "^1.0.0"
unidecode = "^1.1.1"
lxml = "^5.3.0"
tqdm = "^4.46.0"
cachecontrol = "^0.14.0"
openpyxl = "^3.0.3"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.26.1"
prompt_toolkit = "^3.0.5"
questionary = "^2.1.0"
sqlparams = "^6.0.0"
pyyaml = "^6.0.0"
humanize = "^4.0.0"
sickle = "^0.7.0"
requests-toolbelt = "^1.0.0"
rdflib = "^7.0.0"
rdflib-jsonld = "^0.6.0"
attrs = "^25.1.0"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
structlog = "^25.0.0"
mdmail = "^0.1.3"
SPARQLWrapper = "^2.0.0"
pyodbc = "^5.2.0"

[tool.poetry.dev-dependencies]
mypy = "^1.15"
pylint = "^3.3.4"
black = "^25.1.0"
pytest = "^8.3.4"
pycodestyle = "^2.6.0"
pyflakes = "^3.2.0"

[tool.poetry.scripts]
oai = "seiso.console.oai:main"
noraf = "seiso.console.noraf:main"
match_persons = "seiso.console.match_persons:main"
update_persons = "seiso.console.update_persons:main"
verify_bibbi_noraf_mappings = "seiso.console.verify_bibbi_noraf_mappings:main"
verify_noraf_bibbi_mappings = "seiso.console.verify_noraf_bibbi_mappings:main"
monitor_nbvok = "seiso.console.monitor_nbvok:main"
map_nbvok = "seiso.console.map_nbvok:main"
import_grep = "seiso.console.import_grep:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
