[project]
name = "bibbi-seiso"
version = "0.1.0"
description = "Collection of scripts for reporting adn fixing issues with Bibbi and Bibbi mappings"
authors = [
    {name = "Dan Michael O. Heggø", email = "Dan.Michael.Heggo@bibsent.no"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.13"
dependencies = [
    "requests<3.0.0,>=2.23.0",
    "pydash<9.0.0,>=8.0.0",
    "python-dotenv<2.0.0,>=1.0.0",
    "unidecode<2.0.0,>=1.1.1",
    "lxml<6.0.0,>=5.3.0",
    "tqdm<5.0.0,>=4.46.0",
    "cachecontrol<1.0.0,>=0.14.0",
    "openpyxl<4.0.0,>=3.0.3",
    "fuzzywuzzy<1.0.0,>=0.18.0",
    "python-Levenshtein<1.0.0,>=0.26.1",
    "prompt-toolkit<4.0.0,>=3.0.5",
    "questionary<3.0.0,>=2.1.0",
    "sqlparams<7.0.0,>=6.0.0",
    "pyyaml<7.0.0,>=6.0.0",
    "humanize<5.0.0,>=4.0.0",
    "sickle<1.0.0,>=0.7.0",
    "requests-toolbelt<2.0.0,>=1.0.0",
    "rdflib<8.0.0,>=7.0.0",
    "rdflib-jsonld<1.0.0,>=0.6.0",
    "attrs<26.0.0,>=25.1.0",
    "pandas<3.0.0,>=2.2.3",
    "ipykernel<7.0.0,>=6.29.5",
    "structlog<26.0.0,>=25.0.0",
    "mdmail<1.0.0,>=0.1.3",
    "SPARQLWrapper<3.0.0,>=2.0.0",
    "pyodbc<6.0.0,>=5.2.0",
    "ruff>=0.9.6",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
]

[project.scripts]
oai = "seiso.console.oai:main"
noraf = "seiso.console.noraf:main"
match_persons = "seiso.console.match_persons:main"
update_persons = "seiso.console.update_persons:main"
verify_bibbi_noraf_mappings = "seiso.console.verify_bibbi_noraf_mappings:main"
verify_noraf_bibbi_mappings = "seiso.console.verify_noraf_bibbi_mappings:main"
monitor_nbvok = "seiso.console.monitor_nbvok:main"
map_nbvok = "seiso.console.map_nbvok:main"
import_grep = "seiso.console.import_grep:main"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/script"
]

[tool.hatch.build.targets.wheel]
packages = ["seiso"]
